--- a/style.css
+++ b/style.css
@@ -287,6 +287,12 @@ margin:auto;
 	.services-box img{
 		width:60%;
 	}
+	.contact-left-col{
+		flex-basis:100%;
+	}
+	.contact-left-col{
+		flex-basis:100%;
+	}
 	
 }
 
