--- a/style.css
+++ b/style.css
@@ -279,12 +279,12 @@ margin:auto;
 		padding-left:20px;
 		text-align:justify;
 	}
-	.services-box{
+	.Services-box{
 		flex-basis:100%;
 		margin-top:20px;
 		
 	}
-	.services-box img{
+	.Services-box img{
 		width:60%;
 	}
 	.contact-left-col{
