--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ margin:auto;
 @media only screen and(max-width:770px){
 	header{
 		background:red;
-	background-size:100%;
+	background-size:cover;
 		
 	}
 	.menu a{
